[package]
name = "actix_pgm"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
bcrypt = "0.16.0"
chrono = "0.4.39"
dotenvy = "0.15.7"
jsonwebtoken = "9.3.0"
native-tls = "0.2.12"
openssl = "0.10.68"
postgres = "0.19.9"
postgres-native-tls = "0.5.0"
postgres-openssl = "0.5.0"
regex = "1.11.1"
serde = "1.0.216"
serde_json = "1.0.134"
tokio = "1.42.0"
tokio-postgres = "0.7.12"
tokio-postgres-openssl = "0.1.0-rc.1"
uuid = "1.11.0"
